fix the style of alignment of the hotkeys setting

--- a/src/option/options.less
+++ b/src/option/options.less
@@ -138,6 +138,9 @@ body {
 
     #shortcut-setting {
         margin-bottom: 500px;
+        .btn-group {
+            margin-bottom: 5px;
+        }
     }
 
     .container {
